--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-bleak (16.0-1) jammy; urgency=medium
+
+  * Add setuptools dependency.
+
+ -- Sebastien Laclau <seb.laclau@gmail.com>  Thu, 27 Apr 2023 10:30:00 +0100
+ 
 python-bleak (16.0-0) jammy; urgency=medium
 
   * Initial release.
