--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-bleak (16.0-3) jammy; urgency=medium
+
+  * Remove unneeded dependency.
+
+ -- Sebastien Laclau <seb.laclau@gmail.com>  Thu, 27 Apr 2023 16:05:00 +0100
+
 python-bleak (16.0-2) jammy; urgency=medium
 
   * Use python3-all.
